syntax = "proto3";

package product.api.category.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/struct.proto";
import "google/api/field_behavior.proto";
import "validate/validate.proto";
import "query/operation.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/go-saas/kit/product/api/category/v1;v1";


service ProductCategoryService {
  rpc ListProductCategory (ListProductCategoryRequest) returns (ListProductCategoryReply){
    option (google.api.http) = {
      get: "/v1/product/category",
      additional_bindings:{
        post:"/v1/product/category/list",
        body:"*"
      }
    };
  }
  rpc GetProductCategory (GetProductCategoryRequest) returns (ProductCategory){
    option (google.api.http) = {
      get: "/v1/product/category/{key}"
    };
  }
  rpc CreateProductCategory (CreateProductCategoryRequest) returns (ProductCategory){
    option (google.api.http) = {
      post: "/v1/product/category",
      body: "*"
    };
  }
  rpc UpdateProductCategory (UpdateProductCategoryRequest) returns (ProductCategory){
    option (google.api.http) = {
      put: "/v1/product/category/{category.key}",
      body: "*"
      additional_bindings{
        patch: "/v1/product/category/{category.key}",
        body: "*"
      }
    };
  }
  rpc DeleteProductCategory (DeleteProductCategoryRequest) returns (DeleteProductCategoryReply){
    option (google.api.http) = {
      delete: "/v1/product/category/{key}"
    };
  }

}

message CreateProductCategoryRequest {
  string key=1;
  string name =2 [(validate.rules).string.min_len=1,(google.api.field_behavior) = REQUIRED];
  string parent=3;
}

message UpdateProductCategoryRequest {
  UpdateProductCategory category=1 [(validate.rules).message.required=true,(google.api.field_behavior) = REQUIRED];
  google.protobuf.FieldMask update_mask = 2;
}

message UpdateProductCategory{
  string key=1 [(validate.rules).string.min_len=1,(google.api.field_behavior) = REQUIRED];
  string name=2;
}

message DeleteProductCategoryRequest {
  string key=1;
}
message DeleteProductCategoryReply {
  string key=1;
  string name=2;
}

message GetProductCategoryRequest {
  string key=1 [(validate.rules).string.min_len=1,(google.api.field_behavior)=REQUIRED];
}

message ProductCategoryFilter{
  query.operation.StringFilterOperation key=1;
  query.operation.StringFilterOperation name =2;
  query.operation.StringFilterOperation parent=3;
}
message ListProductCategoryRequest {
  int32 page_offset =1;
  int32 page_size = 2;
  string search = 3;
  repeated string sort =4;
  google.protobuf.FieldMask fields=5;
  ProductCategoryFilter filter =6;
}
message ListProductCategoryReply {
  int32 total_size =1;
  int32 filter_size =2;
  repeated ProductCategory items=3;
}
message ProductCategory{
  string key=1;
  string name=2;
  string path=3;
  google.protobuf.Timestamp created_at =4;
  string parent=5;
}
